{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Land",
            "id": "2996b2b5-2748-4b4f-b6bb-5337bc10d170",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "PassThrough",
                    "id": "7a698b3c-74ca-4d4c-b5fc-fc64f3bc9af5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "4849b507-6589-49a7-88b7-d781ab1dae19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "ver",
                    "id": "1d566fcf-cbbc-41ef-a0d2-3306360113aa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "87365d47-dd1d-4979-9eed-6749e6466f0b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "97f734f5-35a3-4c2c-9df5-460d6838037a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "hol",
                    "id": "6d1d3a1a-763b-482f-a873-0fe4dd39e4a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "600fbb19-041a-48db-88cd-0eb2b2757614",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2eb90f7c-d6e0-4ef6-9ed8-8ae37456544a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Interact",
            "id": "726683f5-ffb9-4aff-8a9a-c3101e664572",
            "actions": [
                {
                    "name": "ChangeCharacter",
                    "type": "PassThrough",
                    "id": "2dcb84ba-3be7-4f43-8eb4-3402968532ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "KillPerson",
                    "type": "Button",
                    "id": "406ab118-9980-47fd-91e4-7b2740090a9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b29101f6-7f9f-43c6-9785-b1f7a5eeac5f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7144858b-2023-435f-be1c-5d58d6e2508c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillPerson",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}